# ghost-writer

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  kill-server.md  launch-dev.bat  launch-dev.sh  launch-electron.command  launch.command  package-lock.json  readme.md  stop.command  ~ai-eca88716-b59e-4876-9c1c-e79e1dcc0d25_.tmp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dmg-mac.yml  release.yml
_backups/: 2026-01-25.md  App.css  App.jsx  launch-dev.bat
_backups/2026-01-26-ollama-insert/: 2026-01-26.md  App.jsx  Editor.jsx
_backups/2026-01-26-phase2-implementation/: App.css  App.jsx  Editor.jsx
_backups/2026-01-26-phase2-plan/: 2026-01-26.md  wraider-02-build-plan.md
_backups/2026-01-26-readme-launchers/: 2026-01-26.md
_backups/2026-01-26-stop-command/: 2026-01-26.md
docs/: Ghost-Writer-Repo-Review.md  Ghost-Writer27-mistakes-vibe-coders-make.md  docs-index.md  ghost-writer-Agent-Instruction-todos.md  ghost-writer-about.md  ghost-writer-cs-01.md  ghost-writer-issues.markdown  ghost-writer-issues.md  ghost-writer-to-dos-2.md  ghost-writer-to-dos-3.md  ghost-writer-to-dos-3md.md  ghost-writer-to-dos.md  ghost-writer-todo.md  ghostwriter-feature-list.md  manual-install-smoke-test-macos.md  manual-install-smoke-test-windows.md  manual-install-smoke-test.md  release-smoke-signoff-2026-03-20.md
docs/_old/: Ghost-Writer27-mistakes-vibe-coders-make.md  README.md  ghost-writer-Agent-Instruction-todos.md  ghost-writer-to-dos-3.md  ghost-writer-to-dos.md
docs/agent-workflows/: dash-input-stability-runbook.md  local-models-runbook.md  macos-hardware-release-qa-checklist.md  macos-release-packet.md  macos-release-readiness-review-2026-03-05.md  pr-triage-and-merge.md  print-and-pdf-runbook.md  workflow.md  (+3 more)
src/ghost-writer-editor/src-tauri/: Cargo.toml  tauri.conf.json
src/ghost-writer-editor/src-tauri/capabilities/: default.json
src/ghost-writer-editor/src-tauri/icons/: icon.icns
src/ghost-writer-editor/src-tauri/src/: main.rs
(+121 files in other folders)
