[package]
name = "ghost_writer"
version = "0.1.2"
description = "Ghost Writer desktop app"
authors = ["Ghost Writer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.15.4"
open = "5.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
