[package]
name = "ghost_writer"
version = "0.1.17"
description = "Ghost Writer desktop app"
authors = ["Ghost Writer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
rfd = "0.15.4"
open = "5.3.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPrintInfo", "NSPrintOperation", "NSResponder", "NSTextView", "NSWindow"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["WKWebView"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38.2"
windows = "0.61.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
